# xtransfers

./: README.md  lib.rs
xtransfers_deploy/: .env  hardhat.config.js  package.json
xtransfers_deploy/scripts/: call-ink-library.js  deploy-ink-library.js
xtransfers_ink/: Cargo.toml  lib.rs
